--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -1,13 +1,12 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: .NET
+name: teste
 
 on:
   push:
-    branches: main
-  pull_request:
-    branches: [ "main" ]
+    branches: 
+      - main
 
 jobs:
   build:
