add Scheduled event 2

--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -8,13 +8,13 @@ on:
     branches: 
       - main
   schedule:
-    - cron: `5 15 * * 6´ # every saturday 15:30 UTC 
+    - cron: '5 15 * * 6' # every saturday 15:30 UTC 
 jobs:
   build:
 
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v4
       - name: ola_1
         run: echo "Olá do GitHub Actions!"
