--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -20,9 +20,9 @@ jobs:
         with:
           dotnet-version: 8.0.x
       - name: Restore dependencies
-        run: dotnet restore
+        run:  dotnet restore github4women/github4women.csproj
       - name: Build
-        run: dotnet build --no-restore
+        run: dotnet build github4women/github4women.csproj --no-restore
       - name: Mensagem personalizada
         run: echo "Workflow executado com sucesso!"
 
