--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -8,7 +8,7 @@ on:
     branches: 
       - main
   schedule:
-    - cron: '5 15 * * 6' # every saturday 15:30 UTC 
+    - cron: '0 * * * *' 
 jobs:
   build:
 
